<resources>
    <string name="app_name">My Application</string>
    <string name="tic_tac_tao">Tic-tac-tao</string>
    <string name="score_board">Score Board</string>
    <string name="restart_game">Restart game</string>
    <string name="player_2_0">Player 2:0</string>
    <string name="player_1_0">Player 1:0</string>
    <string name="start_game">Start game</string>
    <string name="player2">Player2</string>
    <string name="name">Name</string>
    <string name="player1">Player1</string>
    <string name="return_back">Return back</string>
    <string name="reset_game">Reset_game</string>
    <string name="player_2">PlaYer2</string>
    <string name="player_1">PlaYer1</string>
</resources>